@@ -1,10 +1,15 @@
-package com.yulim.day_0323.finalProject;
+package com.yulim.day_0323.finalProject.domain;
 
 import java.util.ArrayList;
+import java.util.stream.Collectors;
+import com.yulim.day_0323.finalProject.Util;
+import com.yulim.day_0323.finalProject.csv.MakeList;
+import com.yulim.day_0323.finalProject.entity.Loan;
 
 public class LoanManager {
-
-    ArrayList<Loan> list = new ArrayList<>();
+    
+    MakeList ml = new MakeList();
+    public ArrayList<Loan> list = ml.loanList();
 
     public ArrayList<Loan> getList() {
         return list;
@@ -13,7 +18,7 @@ public class LoanManager {
     // 책 id, 회원 id로 현재 빌리고 있는 책 찾기
     public Loan findLoan(int bookId, int memberId) {
         return list.stream().filter(i -> i.getIsReturned() == false && i.getBookId() == bookId
-                && i.getMemberId() == memberId).toList().get(0);
+                && i.getMemberId() == memberId).collect(Collectors.toList()).get(0);
     }
 
     // 특정 회원의 모든 대출 이력
